新增模板处理，并连接远程数据库

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,14 @@
 <body>
     <h1>GIS Shapefile 导入工具</h1>
 
+    <!-- 导航菜单 -->
+    <div style="margin-bottom: 30px; padding: 15px; background-color: #ecf0f1; border-radius: 5px;">
+        <h3>功能导航</h3>
+        <a href="index.html" style="margin-right: 20px; color: #3498db; text-decoration: none;">🏠 基础上传</a>
+        <a href="template-upload.html" style="margin-right: 20px; color: #3498db; text-decoration: none;">📋 模板上传</a>
+        <a href="coordinate-transform.html" style="color: #3498db; text-decoration: none;">🗺️ 坐标转换</a>
+    </div>
+
     <div>
         <h2>从ZIP文件上传</h2>
         <div class="form-group">
